<resources>
    <string name="app_name">WPAM</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="save">Save</string>
    <string name="show">Show</string>
    <string name="in">IN</string>
    <string name="out">OUT</string>
    <string name="id">ID</string>
    <string name="delete">DELETE</string>
    <string name="message">MESSAGE</string>
    <string name="send">SEND</string>
    <string name="phoneNumber">Enter a phone number</string>
    <string name="messageContent">Enter message here...</string>


    <string name="empty"></string>
    <string name="message_example">Czesc Kochanie, niestety musze dzisiaj zostac dluzej w pracy i bede troche pozniej w domu</string>
</resources>